--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,4 +1,3 @@
-
 <h1>This is a github ranking app</h1>
 
 <p>
@@ -7,21 +6,24 @@
 <ul>
     <li *ngFor="let user of availableUsers" (click)="updateUser(user.login)">{{user.login}}</li>
 </ul>
+<form name="settings">
+    <label htmlFor="username">root username 
+        <input type="text" 
+            placeholder="here" 
+            name="username"
+            [(ngModel)]="username" />
+    </label>
 
-<label htmlFor="username">root username 
-    <input type="text" 
-        placeholder="here" 
-        [(ngModel)]="username" />
-</label>
-<br />      
+    <label htmlFor="level">
+        level
+        <input type="text"
+            name="level"
+            default="1"
+            [(ngModel)]="reportLevel" 
+            value="1" />
+    </label>
+</form>
 
-<label htmlFor="levelsCheckbox">
-    <input type="checkbox" 
-        id="levelsCheckbox" 
-        [(ngModel)]="reportLevel" 
-        value="2" />  
-  2 levels report 
-</label>
 <br />
 <br />
 
