--- a/src/app/components/report/report.component.html
+++ b/src/app/components/report/report.component.html
@@ -1,4 +1,4 @@
-<table class="report" *ngIf="reportData.length > 0">
+<table class="report" *ngIf="reportCurrentPage.length > 0">
     <tr>
         <th colspan="3">
             {{rootUsername}}'s followers report
@@ -21,12 +21,25 @@
         [class]="getSortClass('followersLevel2')"
         >Rank</th>
     </tr>
-    <tr *ngFor="let user of reportData">
+    <tr *ngFor="let user of reportCurrentPage">
         <td><a href="{{user.html_url}}" target="_blank"><img src="{{user.avatar_url}}" width="30" height="30" alt="User Avatar" /> {{user.login}}</a></td>
         <td>{{user.created_at | date}}</td>
         <td *ngIf="!reportLevel">{{user.followers}}</td>
         <td *ngIf="reportLevel">{{user.followersLevel2}}</td>
+    </tr>
+    <tr>
+        <td colspan="3">
+            <div class="pagination">
+                <button [disabled]="currentPage === 1" (click)="previousPage()">
+                    &#60;
+                </button>
+                <span>{{currentPage}} / {{totalPages}}</span>
+                <button [disabled]="currentPage === totalPages" (click)="nextPage()">
+                    &#62;    
+                </button>
+            </div>
+        </td> 
+    </tr>
 </table>
-<div class="report" *ngIf="reportData.length === 0">
-    <p>No data available</p>
-</div>
+
+
