--- a/src/app/components/report/report.component.scss
+++ b/src/app/components/report/report.component.scss
@@ -4,8 +4,13 @@ div.report {
     text-align: center;
 }
 .report {
-    width: 100%;
+    width: 93%;
+    margin: 0 auto;
+    background-color: aliceblue;
+    border-radius: 5px;
     th {
+        border-bottom: 1px solid #ffffff;
+        padding: 2px 10px;
         height: 35px;
         text-align: center;
         &.desc::after {
@@ -15,8 +20,15 @@ div.report {
             content: "\2191"; // Arrow up
         }
     }
-    tr {
-        background-color: aliceblue;
+    tr:nth-child(2) th {
+        text-align: left;
+
+    } 
+    th:nth-child(1), td:nth-child(1), th:nth-child(2), td:nth-child(2) {
+        width: 35%;
+    }
+    th:nth-child(3) {
+        width: 30%;
     }
     td {
         text-align: left;
@@ -24,6 +36,27 @@ div.report {
         a {
             line-height: 30px;
             font-weight: bold;
+        }
+    }
+    .pagination {
+        margin: 20px 0 10px;
+        text-align: center;
+        button {
+            border: 2px solid #000000;
+            margin: 3px 10px 0;
+            padding: 5px;
+            border-radius: 5px;
+            height: 28px;
+            width: 28px;
+            background-color: #ffffff;  
+            color: #000000;  
+            font-weight: bold;
+            &:disabled {
+                background-color: #cccccc;
+                color: #666666;
+                border: 2px solid #666666;
+                font-weight: bold;
+            }
         }
     }
 }
