bfs, moved to observable

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -16,11 +16,12 @@
 
     <label htmlFor="level">
         level
-        <input type="text"
+        <input type="number"
             name="level"
             default="1"
             [(ngModel)]="reportLevel" 
-            value="1" />
+            oninput="if(value < 1) value = 1"
+            />
     </label>
 </form>
 
