--- a/src/app/components/report/report.component.scss
+++ b/src/app/components/report/report.component.scss
@@ -2,6 +2,7 @@ div.report {
     font-size: 14px;
     font-weight: bold;
     text-align: center;
+    padding: 20px;
 }
 .report {
     width: 93%;
@@ -36,6 +37,7 @@ div.report {
         a {
             line-height: 30px;
             font-weight: bold;
+            color: #09475e
         }
     }
     .pagination {
