--- a/src/app/components/report/report.component.html
+++ b/src/app/components/report/report.component.html
@@ -1,7 +1,7 @@
 <table class="report" *ngIf="(reportCurrentPage$ | async)">
     <tr>
         <th colspan="3">
-            {{rootUsername}}'s followers report
+            {{rootUsername}}'s followers report, level 
             {{reportLevel}}
         </th>
     </tr>
